--- a/html_menu_1/submit-review.html
+++ b/html_menu_1/submit-review.html
@@ -45,84 +45,32 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-3 col-6">
-					<div id="logo">
-						<a href="index.html" title="Findoctor"><img src="img/logo.png" data-retina="true" alt="" width="163" height="36"></a>
+					<div id="logo_home">
+						<h1><a href="index.html" title="PSYCHOBOOKING">PSYCHOBOOKING</a></h1>
 					</div>
 				</div>
 				<nav class="col-lg-9 col-6">
-					<a class="cmn-toggle-switch cmn-toggle-switch__htx open_close" href="#0"><span>Menú móvil</span></a>
+					<a class="cmn-toggle-switch cmn-toggle-switch__htx open_close" href="#0"><span>Menu mobile</span></a>
 					<ul id="top_access">
-						<li id="user">
-							<a href="#0">
-								<figure><img src="http://via.placeholder.com/150x150.jpg" alt=""></figure>
-								Jhossias Calderón
-							</a>
-						</li>
+						<li><a href="login.html"><i class="pe-7s-user"></i></a></li>
+						<li><a href="register.html"><i class="pe-7s-add-user"></i></a></li>
 					</ul>
 					<div class="main-menu">
 						<ul>
-							<li class="submenu">
-								<li class="submenu">
-									<a href="index.html" class="show-home">Inicio<i class="icon-down-open-mini"></i></a>
-								</li>
-							</li>
-							<li class="submenu">
-								<a href="#0" class="show-submenu">Páginas<i class="icon-down-open-mini"></i></a>
-								<ul>
-									<li class="third-level"><a href="#0">Lista de Páginas</a>
-										<ul>
-                                            <li><a href="list.html">List page</a></li>
-											<li><a href="grid-list.html">List grid page</a></li>
-											<li><a href="list-map.html">List map page</a></li>
-                                        </ul>
-									</li>
-									<li class="third-level"><a href="#0">Detail pages</a>
-										<ul>
-                                            <li><a href="detail-page-2.html">Detail page 1</a></li>
-                                            <li><a href="detail-page-2.html">Detail page 2</a></li>
-                                    		<li><a href="detail-page-3.html">Detail page 3</a></li>
-											<li><a href="detail-page-working-booking.html">Detail working booking</a></li>
-                                        </ul>
-									</li>
-									<li><a href="submit-review.html">Enviar Reseña</a></li>
-									<li><a href="blog-1.html">Blog</a></li>
-									<li><a href="badges.html">Badges</a></li>
-									<li><a href="login.html">Login</a></li>
-									<li><a href="login-2.html">Login 2</a></li>
-									<li><a href="register-doctor.html">Register Doctor</a></li>
-									<li><a href="register-doctor-working.html">Working doctor register</a></li>
-									<li><a href="register.html">Register</a></li>
-									<li><a href="about.html">About Us</a></li>
-									<li><a href="contacts.html">Contacts</a></li>
-								</ul>
-							</li>
-							<li class="submenu">
-								<a href="#0" class="show-submenu">Elementos Extra<i class="icon-down-open-mini"></i></a>
-								<ul>
-                                    <li><a href="booking-page.html">Booking page</a></li>
-                                    <li><a href="confirm.html">Confirm page</a></li>
-                                	<li><a href="faq.html">Faq page</a></li>
-                                    <li><a href="coming_soon/index.html">Coming soon</a></li>
-									<li class="third-level"><a href="#0">Pricing tables</a>
-										<ul>
-											<li><a href="pricing-tables-3.html">Pricing tables 1</a></li>
-                                    		<li><a href="pricing-tables.html">Pricing tables 2</a></li>
-                                    		<li><a href="pricing-tables-2.html">Pricing tables 3</a></li>
-										</ul>
-									</li>
-									<li><a href="icon-pack-1.html">Icon pack 1</a></li>
-									<li><a href="icon-pack-2.html">Icon pack 2</a></li>
-									<li><a href="icon-pack-3.html">Icon pack 3</a></li>
-									<li><a href="404.html">404 page</a></li>
-								</ul>
-							</li>
+							<li><a href="index.html">Principal</a></li>
+							<li><a href="blog-1.html">Noticias</a></li>
+							<li><a href="register-doctor.html">Registrar Psicólogo</a></li>
+							<li><a href="about.html">Sobre nosotros</a></li>
+							<li><a href="contacts.html">Contactenos</a></li>
+							<li><a href="faq.html">Faq page</a></li>
+							
 						</ul>
 					</div>
 					<!-- /main-menu -->
 				</nav>
 			</div>
 		</div>
-		<!-- container -->
+		<!-- /container -->
 	</header>
 	<!-- /Header -->	
 	
@@ -190,41 +138,31 @@
 	<footer>
 		<div class="container margin_60_35">
 			<div class="row">
-				<div class="col-lg-3 col-md-12">
+				<div class="col-lg-4 col-md-12">
 					<p>
-						<a href="index.html" title="Findoctor">
+						<a href="index.html" title="PSYCHOBOOKING">
 							<img src="img/logo.png" data-retina="true" alt="" width="163" height="36" class="img-fluid">
 						</a>
 					</p>
 				</div>
-				<div class="col-lg-3 col-md-4">
-					<h5>About</h5>
+				<div class="col-lg-4 col-md-4">
+					<h5>Acerca de</h5>
 					<ul class="links">
-						<li><a href="#0">Acerca de Nosotros</a></li>
-						<li><a href="blog.html">Blog</a></li>
-						<li><a href="#0">FAQ</a></li>
-						<li><a href="login.html">Iniciar Sesión</a></li>
-						<li><a href="register.html">Registro</a></li>
+						<li><a href="blog-1.html">Noticias</a></li>
+						<li><a href="register-doctor.html">Registrar Psicólogo</a></li>
+						<li><a href="about.html">Sobre nosotros</a></li>
+						<li><a href="contacts.html">Contactenos</a></li>
 					</ul>
 				</div>
-				<div class="col-lg-3 col-md-4">
-					<h5>Enlaces Útiles</h5>
-					<ul class="links">
-						<li><a href="#0">Psicólogos</a></li>
-						<li><a href="#0">Lugares</a></li>
-						<li><a href="#0">Especializaciones</a></li>
-						<li><a href="#0">Ingresar como Psicólogo</a></li>
-						<li><a href="#0">Descargar App</a></li>
-					</ul>
-				</div>
-				<div class="col-lg-3 col-md-4">
-					<h5>Contactese con Nosotros</h5>
+				
+				<div class="col-lg-4 col-md-4">
+					<h5>Contact with Us</h5>
 					<ul class="contacts">
 						<li><a href="tel://61280932400"><i class="icon_mobile"></i> + 61 23 8093 3400</a></li>
-						<li><a href="mailto:info@findoctor.com"><i class="icon_mail_alt"></i> help@findoctor.com</a></li>
+						<li><a href="mailto:info@PSYCHOBOOKING.com"><i class="icon_mail_alt"></i> help@PSYCHOBOOKING.com</a></li>
 					</ul>
 					<div class="follow_us">
-						<h5>Síguenos</h5>
+						<h5>Follow us</h5>
 						<ul>
 							<li><a href="#0"><i class="social_facebook"></i></a></li>
 							<li><a href="#0"><i class="social_twitter"></i></a></li>
@@ -239,12 +177,12 @@
 			<div class="row">
 				<div class="col-md-8">
 					<ul id="additional_links">
-						<li><a href="#0">Terminos y Condiciones</a></li>
+						<li><a href="#0">Términos y Condiciones</a></li>
 						<li><a href="#0">Privacidad</a></li>
 					</ul>
 				</div>
 				<div class="col-md-4">
-					<div id="copy">© 2020 PsychoBooking</div>
+					<div id="copy">© 2017 PSYCHOBOOKING</div>
 				</div>
 			</div>
 		</div>
