--- a/html_menu_1/blog-1.html
+++ b/html_menu_1/blog-1.html
@@ -91,8 +91,8 @@
 
 		<div class="container margin_60">
 			<div class="main_title">
-				<h1>Findoctor Blog</h1>
-				<p>Usu habeo equidem sanctus no. Suas summo id sed, erat erant oporteat cu pri. In eum omnes molestie. Sed ad debet scaevola, ne mel.</p>
+				<h1>Noticias de Psicología</h1>
+				<p>A continuación las noticias más relevantes en los últimos meses a nivel mundial sobre temas de psicología.</p>
 			</div>
 			<div class="row">
 				<div class="col-lg-9">
@@ -100,17 +100,17 @@
 						<div class="row no-gutters">
 							<div class="col-lg-7">
 								<figure>
-									<a href="blog-post.html"><img src="http://via.placeholder.com/800x533.jpg" alt=""><div class="preview"><span>Read more</span></div></a>
+									<a href="blog-post.html"><img src="https://static2.abc.es/media/bienestar/2020/07/07/emociones-mmindfulness-kM7D--620x349@abc.jpeg" alt=""><div class="preview"><span>Read more</span></div></a>
 								</figure>
 							</div>
 							<div class="col-lg-5">
 								<div class="post_info">
-									<small>20 Nov. 2017</small>
-									<h3><a href="blog-post.html">Nec nihil menandri appellantur ut</a></h3>
-									<p>Quodsi sanctus pro eu, ne audire scripserit quo. Vel an enim offendit salutandi, in eos quod omnes epicurei, ex veri qualisque scriptorem mei.</p>
+									<small>07 Jul. 2020</small>
+									<h3><a href="blog-post.html">Aceptar las emociones negativas: la clave para sentirse bien</a></h3>
+									<p>Dialogar con cómo nos sentimos es el primer paso para cuidar nuestra salud emocional</p>
 									<ul>
 										<li>
-											<div class="thumb"><img src="http://via.placeholder.com/100x100.jpg" alt=""></div> Jessica Hoops
+											<div class="thumb"><img src="https://lh3.googleusercontent.com/proxy/2rqXHCeL-Rc5qtH7Ia3XrQlTbQagmCK1N9e_8g_WtEF5ocEzhjGAc22C823_q2oNUc1lupVwlmqYJVXwYvNjfAl3DdOKMF_MxwWP9hVMw3FVdoWmlL-nGWQn1XrLxsLJ8Xlltd9Krt4-dsISyKs" alt=""></div> M. Alcaraz
 										</li>
 										<li><i class="icon_comment_alt"></i> 20</li>
 									</ul>
@@ -311,7 +311,7 @@
 				<div class="col-lg-4 col-md-4">
 					<h5>Contact with Us</h5>
 					<ul class="contacts">
-						<li><a href="tel://61280932400"><i class="icon_mobile"></i> + 61 23 8093 3400</a></li>
+						<li><a href="tel://61280932400"><i class="icon_mobile"></i> +593 985652891</a></li>
 						<li><a href="mailto:info@PSYCHOBOOKING.com"><i class="icon_mail_alt"></i> help@PSYCHOBOOKING.com</a></li>
 					</ul>
 					<div class="follow_us">
@@ -335,7 +335,7 @@
 					</ul>
 				</div>
 				<div class="col-md-4">
-					<div id="copy">© 2017 PSYCHOBOOKING</div>
+					<div id="copy">© 2020 PSYCHOBOOKING</div>
 				</div>
 			</div>
 		</div>
