--- a/html_menu_1/index.html
+++ b/html_menu_1/index.html
@@ -5,12 +5,12 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="Encuentra facilmente un doctor y agenda tu cita ahora!">
-	<meta name="author" content="David, Jhossias, Galo">
-	<title>PSYCHOBOOKING - Encuentra facilmente un doctor y agenda tu cita ahora!</title>
+	<meta name="description" content="Búsqueda fácil de un Psicólogo en linea y reservación de turno">
+	<meta name="author" content="Ansonika">
+	<title>PSYCHOBOOKING - Encuentre fácilmente un psicólogo y reserve una cita en línea</title>
 
 	<!-- Favicons-->
-	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="img/favicoon.ico" type="image/x-icon">
 	<link rel="apple-touch-icon" type="image/x-icon" href="img/apple-touch-icon-57x57-precomposed.png">
 	<link rel="apple-touch-icon" type="image/x-icon" sizes="72x72" href="img/apple-touch-icon-72x72-precomposed.png">
 	<link rel="apple-touch-icon" type="image/x-icon" sizes="114x114" href="img/apple-touch-icon-114x114-precomposed.png">
@@ -45,7 +45,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-3 col-6">
-					<div id="logo_home">
+					<div id="logo_home" class="col-sm-3">
 						<h1><a href="index.html" title="PSYCHOBOOKING">PSYCHOBOOKING</a></h1>
 					</div>
 				</div>
