--- a/html_menu_1/register.html
+++ b/html_menu_1/register.html
@@ -5,12 +5,12 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="Find easily a doctor and book online an appointment">
+	<meta name="description" content="Búsqueda fácil de un Psicólogo en linea y reservación de turno">
 	<meta name="author" content="Ansonika">
-	<title>FINDOCTOR - Find easily a doctor and book online an appointment</title>
+	<title>PSYCHOBOOKING - Encuentre fácilmente un psicólogo y reserve una cita en línea</title>
 
 	<!-- Favicons-->
-	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="img/favicoon.ico" type="image/x-icon">
 	<link rel="apple-touch-icon" type="image/x-icon" href="img/apple-touch-icon-57x57-precomposed.png">
 	<link rel="apple-touch-icon" type="image/x-icon" sizes="72x72" href="img/apple-touch-icon-72x72-precomposed.png">
 	<link rel="apple-touch-icon" type="image/x-icon" sizes="114x114" href="img/apple-touch-icon-114x114-precomposed.png">
@@ -50,7 +50,7 @@
 					</div>
 				</div>
 				<nav class="col-lg-9 col-6">
-					<a class="cmn-toggle-switch cmn-toggle-switch__htx open_close" href="#0"><span>Menu mobile</span></a>
+					<a class="cmn-toggle-switch cmn-toggle-switch__htx open_close" href="#0"><span>Menú móvil</span></a>
 					<ul id="top_access">
 						<li><a href="login.html"><i class="pe-7s-user"></i></a></li>
 						<li><a href="register.html"><i class="pe-7s-add-user"></i></a></li>
@@ -78,17 +78,17 @@
 		<div class="bg_color_2">
 			<div class="container margin_60_35">
 				<div id="register">
-					<h1>Please register to Findoctor!</h1>
+					<h1>Por favor, regístrate en PsychoBooking!</h1>
 					<div class="row justify-content-center">
 						<div class="col-md-5">
 							<form>
 								<div class="box_form">
 									<div class="form-group">
-										<label>Name</label>
+										<label>Nombre</label>
 										<input type="text" class="form-control" placeholder="Your name">
 									</div>
 									<div class="form-group">
-										<label>Last name</label>
+										<label>Apellido</label>
 										<input type="text" class="form-control" placeholder="Your last name">
 									</div>
 									<div class="form-group">
@@ -96,25 +96,25 @@
 										<input type="email" class="form-control" placeholder="Your email address">
 									</div>
 									<div class="form-group">
-										<label>Password</label>
+										<label>Contraseña</label>
 										<input type="password" class="form-control" id="password1" name="password1" placeholder="Your password">
 									</div>
 									<div class="form-group">
-										<label>Confirm password</label>
+										<label>Confirmar Contraseña</label>
 										<input type="password" class="form-control" id="password2" name="password2" placeholder="Confirm password">
 									</div>
 									<div id="pass-info" class="clearfix"></div>
 									<div class="checkbox-holder text-left">
 										<div class="checkbox_2">
 											<input type="checkbox" value="accept_2" id="check_2" name="check_2" checked>
-											<label for="check_2"><span>I Agree to the <strong>Terms &amp; Conditions</strong></span></label>
+											<label for="check_2"><span>Acepto los <strong>Términos &amp; Condiciones</strong></span></label>
 										</div>
 									</div>
 									<div class="form-group text-center add_top_30">
 										<input class="btn_1" type="submit" value="Submit">
 									</div>
 								</div>
-								<p class="text-center"><small>Has voluptua vivendum accusamus cu. Ut per assueverit temporibus dissentiet. Eum no atqui putant democritum, velit nusquam sententiae vis no.</small></p>
+								<p class="text-center"><small>Al aceptar los términos y condiciones nos dás la posibilidad de enviarte mensajes con información relevante y conservar tus datos personales con la mayor privacidad en nuestra base de datos.</small></p>
 							</form>
 						</div>
 					</div>
@@ -149,7 +149,7 @@
 				<div class="col-lg-4 col-md-4">
 					<h5>Contact with Us</h5>
 					<ul class="contacts">
-						<li><a href="tel://61280932400"><i class="icon_mobile"></i> + 61 23 8093 3400</a></li>
+						<li><a href="tel://61280932400"><i class="icon_mobile"></i> +593 985652891</a></li>
 						<li><a href="mailto:info@PSYCHOBOOKING.com"><i class="icon_mail_alt"></i> help@PSYCHOBOOKING.com</a></li>
 					</ul>
 					<div class="follow_us">
@@ -173,7 +173,7 @@
 					</ul>
 				</div>
 				<div class="col-md-4">
-					<div id="copy">© 2017 PSYCHOBOOKING</div>
+					<div id="copy">© 2020 PSYCHOBOOKING</div>
 				</div>
 			</div>
 		</div>
