--- a/html_menu_1/contacts.html
+++ b/html_menu_1/contacts.html
@@ -75,35 +75,37 @@
 	<!-- /Header -->
 	
 	<main>
-		<div id="map_contact"></div>
+		<div>
+			<iframe id="map_contact" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15947.93653137347!2d-79.91258578380936!3d-2.1597380078715296!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x902d6d8eff7b88f7%3A0x2dee947c05d102a7!2sPsiconCiencia%20S.A.!5e0!3m2!1ses-419!2sec!4v1594669805956!5m2!1ses-419!2sec" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+		</div>
 		<!-- /map -->
 		
 		<div class="container margin_60_35">
 			<div class="row">
 				<aside class="col-lg-3 col-md-4">
 					<div id="contact_info">
-						<h3>Contacts info</h3>
+						<h3>Información de Contacto</h3>
 						<p>
-							11 Fifth Ave - New York, US<br> + 61 (2) 8093 3400<br>
-							<a href="#">info@domain.com</a>
+							Urdesa Norte - Guayaquil, EC<br> +593 985652891<br>
+							<a href="#">info@psychobooking.com</a>
 						</p>
-						<h4>Get directions</h4>
+						<h4>Obtener dirección</h4>
 						<form action="http://maps.google.com/maps" method="get" target="_blank">
 							<div class="form-group">
-								<input type="text" name="saddr" placeholder="Enter your location" class="form-control styled">
-								<input type="hidden" name="daddr" value="New York, NY 11430">
+								<input type="text" name="saddr" placeholder="Escribe tu dirección" class="form-control styled">
+								<input type="hidden" name="daddr" value="Bálsamos 920, Guayaquil 090511">
 								<!-- Write here your end point -->
 							</div>
-							<input type="submit" value="Get directions" class="btn_1 add_bottom_45">
+							<input type="submit" value="Obtener dirección" class="btn_1 add_bottom_45">
 						</form>
 						<ul>
-							<li><strong>Administration</strong>
-								<a href="tel://003823932342">0038 23932342</a><br><a href="tel://003823932342">admin@findoctor.com</a><br>
-								<small>Monday to Friday 9am - 7pm</small>
+							<li><strong>Administración</strong>
+								<a href="tel://003823932342">+593 985652898</a><br><a href="tel://+593985652898">admin@psichobooking.com</a><br>
+								<small>Lunes a Viernes 9am - 7pm</small>
 							</li>
-							<li><strong>General questions</strong>
-								<a href="tel://003823932342">0038 23932342</a><br><a href="tel://003823932342">questions@findoctor.com</a><br>
-								<p><small>Monday to Friday 9am - 7pm</small></p>
+							<li><strong>Preguntas</strong>
+								<a href="tel://003823932342">+593 985652897</a><br><a href="tel://+593985652897">preguntas@psychobooking.com</a><br>
+								<p><small>Lunes a Viernes 9am - 7pm</small></p>
 							</li>
 						</ul>
 					</div>
@@ -111,9 +113,9 @@
 				<!--/aside -->
 				<div class=" col-lg-8 col-md-8 ml-auto">
 					<div class="box_general">
-						<h3>Contact us</h3>
+						<h3>Contáctenos</h3>
 						<p>
-							Mussum ipsum cacilds, vidis litro abertis.
+							¿Necesitas algo? No dudes en escribirnos.
 						</p>
 						<div>
 							<div id="message-contact"></div>
@@ -121,12 +123,12 @@
 								<div class="row">
 									<div class="col-md-6 col-sm-6">
 										<div class="form-group">
-											<input type="text" class="form-control" id="name_contact" name="name_contact" placeholder="Name">
+											<input type="text" class="form-control" id="name_contact" name="name_contact" placeholder="Nombre">
 										</div>
 									</div>
 									<div class="col-md-6 col-sm-6">
 										<div class="form-group">
-											<input type="text" class="form-control" id="lastname_contact" name="lastname_contact" placeholder="Last name">
+											<input type="text" class="form-control" id="lastname_contact" name="lastname_contact" placeholder="Apellido">
 										</div>
 									</div>
 								</div>
@@ -138,14 +140,14 @@
 									</div>
 									<div class="col-md-6 col-sm-6">
 										<div class="form-group">
-											<input type="text" id="phone_contact" name="phone_contact" class="form-control" placeholder="Phone number">
+											<input type="text" id="phone_contact" name="phone_contact" class="form-control" placeholder="Número de Teléfono">
 										</div>
 									</div>
 								</div>
 								<div class="row">
 									<div class="col-md-12">
 										<div class="form-group">
-											<textarea rows="5" id="message_contact" name="message_contact" class="form-control" style="height:100px;" placeholder="Hello world!"></textarea>
+											<textarea rows="5" id="message_contact" name="message_contact" class="form-control" style="height:100px;" placeholder="Escribe aquí tu mensaje!"></textarea>
 										</div>
 									</div>
 								</div>
@@ -156,7 +158,7 @@
 										</div>
 									</div>
 								</div>
-								<input type="submit" value="Submit" class="btn_1 add_top_20" id="submit-contact">
+								<input type="submit" value="Enviar" class="btn_1 add_top_20" id="submit-contact">
 							</form>
 						</div>
 						<!-- /col -->
@@ -193,7 +195,7 @@
 				<div class="col-lg-4 col-md-4">
 					<h5>Contact with Us</h5>
 					<ul class="contacts">
-						<li><a href="tel://61280932400"><i class="icon_mobile"></i> + 61 23 8093 3400</a></li>
+						<li><a href="tel://61280932400"><i class="icon_mobile"></i> +593 985652891</a></li>
 						<li><a href="mailto:info@PSYCHOBOOKING.com"><i class="icon_mail_alt"></i> help@PSYCHOBOOKING.com</a></li>
 					</ul>
 					<div class="follow_us">
@@ -217,7 +219,7 @@
 					</ul>
 				</div>
 				<div class="col-md-4">
-					<div id="copy">© 2017 PSYCHOBOOKING</div>
+					<div id="copy">© 2020 PSYCHOBOOKING</div>
 				</div>
 			</div>
 		</div>
