about y detail jhossias

--- a/html_menu_1/about.html
+++ b/html_menu_1/about.html
@@ -119,21 +119,21 @@
 				<div class="item">
 					<a href="detail-about-1.html">
 						<div class="title">
-							<h4>David Mendoza<em>Desarrollador 1</em></h4>
+							<h4>David Mendoza<em>Desarrollador Amable</em></h4>
 						</div><img src="http://via.placeholder.com/350x500.jpg" alt="">
 					</a>
 				</div>
 				<div class="item">
 					<a href="detail-about-2.html">
 						<div class="title">
-							<h4>Jhossias Pawell<em>Desarrollador 2</em></h4>
-						</div><img src="http://via.placeholder.com/350x500.jpg" alt="">
+							<h4>Jhossias Calderón<em>Desarrollador Honesto</em></h4>
+						</div><img src="img/jhossias.jpg" alt="">
 					</a>
 				</div>
 				<div class="item">
 					<a href="detail-about-3.html">
 						<div class="title">
-							<h4>Galo Ortega<em>Desarrollador 3</em></h4>
+							<h4>Galo Ortega<em>Desarrollador Servicial</em></h4>
 						</div><img src="http://via.placeholder.com/350x500.jpg" alt="">
 					</a>
 				</div>
