--- a/html_menu_1/detail-about-2.html
+++ b/html_menu_1/detail-about-2.html
@@ -78,9 +78,9 @@
 		<div id="breadcrumb">
 			<div class="container">
 				<ul>
-					<li><a href="#">Home</a></li>
-					<li><a href="#">Category</a></li>
-					<li>Page active</li>
+					<li><a href="index.html">Principal</a></li>
+					<li><a href="about.html">Sobre Nosotros</a></li>
+					<li>Jhossias Calderón</li>
 				</ul>
 			</div>
 		</div>
@@ -92,8 +92,8 @@
 					<nav id="secondary_nav">
 						<div class="container">
 							<ul class="clearfix">
-								<li><a href="#section_1" class="active">General info</a></li>
-								<li><a href="#section_2">Reviews</a></li>
+								<li><a href="#section_1" class="active">Información General</a></li>
+								<li><a href="#section_2">Resúmen</a></li>
 								<li><a href="#sidebar">Booking</a></li>
 							</ul>
 						</div>
@@ -104,12 +104,12 @@
 								<div class="row">
 									<div class="col-lg-5 col-md-4">
 										<figure>
-											<img src="http://via.placeholder.com/565x565.jpg" alt="" class="img-fluid">
+											<img src="img/jhossias.jpg" alt="" class="img-fluid">
 										</figure>
 									</div>
 									<div class="col-lg-7 col-md-8">
-										<small>Estudiante de Ing en Computacion</small>
-										<h1>Jhossias Pawell</h1>
+										<small>Estudiante de Ing. en Computacion</small>
+										<h1>Jhossias Calderón</h1>
 										<span class="rating">
 											<i class="icon_star voted"></i>
 											<i class="icon_star voted"></i>
@@ -122,12 +122,12 @@
 										
 										<ul class="contacts">
 											<li>
-												<h6>Direccion</h6>
-												Guayaqui;
-												<a href="https://www.google.com/maps/dir//Assistance+%E2%80%93+H%C3%B4pitaux+De+Paris,+3+Avenue+Victoria,+75004+Paris,+Francia/@48.8606548,2.3348734,14z/data=!4m15!1m6!3m5!1s0x0:0xa6a9af76b1e2d899!2sAssistance+%E2%80%93+H%C3%B4pitaux+De+Paris!8m2!3d48.8568376!4d2.3504305!4m7!1m0!1m5!1m1!1s0x47e67031f8c20147:0xa6a9af76b1e2d899!2m2!1d2.3504327!2d48.8568361" target="_blank"> <strong>View on map</strong></a>
+												<h6>Dirección</h6>
+												Daule, 101065
+												<a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3987.4014309830864!2d-79.94632758589519!3d-1.9943959373694018!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x902d0e4a9108cb69%3A0x2d5d85e6e7f75313!2sV%C3%ADa%20a%20Los%20Lojas!5e0!3m2!1ses-419!2sec!4v1594670729153!5m2!1ses-419!2sec" target="_blank"> <strong>Ver en el Mapa</strong></a>
 											</li>
 											<li>
-												<h6>Phone</h6> <a href="tel://000434323342">+00043 4323342</a> - <a href="tel://000434323342">+00043 4323342</a></li>
+												<h6>Teléfonos</h6> <a href="tel://+593989675332">+593989675332</a> - <a href="tel://+593989675331">+593989675331</a></li>
 										</ul>
 									</div>
 								</div>
@@ -137,11 +137,11 @@
 
 							<div class="indent_title_in">
 								<i class="pe-7s-news-paper"></i>
-								<h3>Education</h3>
+								<h3>Educación</h3>
 								<p>Universitaria.</p>
 							</div>
 							<div class="wrapper_indent">
-								<p>Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Nullam mollis. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapi.</p>
+								<p>Estudia ingeniería en computación en la Escuela Superior Politécnica del Litoral y está cursando la materia de Desarrollo de Aplicaciones Web y Móviles.</p>
 								<h6>Curriculum</h6>
 								<ul class="list_edu">
 									<li><strong>Espol</strong> - Estudiante</li>
