--- a/html_menu_1/login.html
+++ b/html_menu_1/login.html
@@ -50,7 +50,7 @@
 					</div>
 				</div>
 				<nav class="col-lg-9 col-6">
-					<a class="cmn-toggle-switch cmn-toggle-switch__htx open_close" href="#0"><span>Menu mobile</span></a>
+					<a class="cmn-toggle-switch cmn-toggle-switch__htx open_close" href="#0"><span>Menu móvil</span></a>
 					<ul id="top_access">
 						<li><a href="login.html"><i class="pe-7s-user"></i></a></li>
 						<li><a href="register.html"><i class="pe-7s-add-user"></i></a></li>
@@ -78,29 +78,29 @@
 		<div class="bg_color_2">
 			<div class="container margin_60_35">
 				<div id="login-2">
-					<h1>Please login to Findoctor!</h1>
+					<h1>Ingresa a Psichobooking!</h1>
 					<form>
 						<div class="box_form clearfix">
 							<div class="box_login">
-								<a href="#0" class="social_bt facebook">Login with Facebook</a>
-								<a href="#0" class="social_bt google">Login with Google</a>
-								<a href="#0" class="social_bt linkedin">Login with Linkedin</a>
+								<a href="#0" class="social_bt facebook">Inicia sesión con Facebook</a>
+								<a href="#0" class="social_bt google">Inicia sesión con Google</a>
+								<a href="#0" class="social_bt linkedin">Inicia sesión con Linkedin</a>
 							</div>
 							<div class="box_login last">
 								<div class="form-group">
-									<input type="email" class="form-control" placeholder="Your email address">
+									<input type="email" class="form-control" placeholder="Tu correo electrónico">
 								</div>
 								<div class="form-group">
-									<input type="password" class="form-control" placeholder="Your password" name="password" id="password">
-									<a href="#0" class="forgot"><small>Forgot password?</small></a>
+									<input type="password" class="form-control" placeholder="Tu contraseña" name="password" id="password">
+									<a href="#0" class="forgot"><small>¿Olvidaste tu contraseña?</small></a>
 								</div>
 								<div class="form-group">
-									<input class="btn_1" type="submit" value="Login">
+									<input class="btn_1" type="submit" value="Ingresar">
 								</div>
 							</div>
 						</div>
 					</form>
-					<p class="text-center link_bright">Do not have an account yet? <a href="#0"><strong>Register now!</strong></a></p>
+					<p class="text-center link_bright">¿Aún no tienes una cuenta? <a href="#0"><strong>Registrate Ahora!</strong></a></p>
 				</div>
 				<!-- /login -->
 			</div>
@@ -131,7 +131,7 @@
 				<div class="col-lg-4 col-md-4">
 					<h5>Contact with Us</h5>
 					<ul class="contacts">
-						<li><a href="tel://61280932400"><i class="icon_mobile"></i> + 61 23 8093 3400</a></li>
+						<li><a href="tel://61280932400"><i class="icon_mobile"></i> +593 985652891</a></li>
 						<li><a href="mailto:info@PSYCHOBOOKING.com"><i class="icon_mail_alt"></i> help@PSYCHOBOOKING.com</a></li>
 					</ul>
 					<div class="follow_us">
@@ -155,7 +155,7 @@
 					</ul>
 				</div>
 				<div class="col-md-4">
-					<div id="copy">© 2017 PSYCHOBOOKING</div>
+					<div id="copy">© 2020 PSYCHOBOOKING</div>
 				</div>
 			</div>
 		</div>
