--- a/html_menu_1/register-doctor.html
+++ b/html_menu_1/register-doctor.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="Búsqueda fácil de un Psicólogo en linea y reservación de turno">
-	<meta name="author" content="Ansonika">
+	<meta name="author" content="David, Jhossias, Galo">
 	<title>PSYCHOBOOKING - Encuentre fácilmente un psicólogo y reserve una cita en línea</title>
 
 	<!-- Favicons-->
@@ -50,7 +50,7 @@
 					</div>
 				</div>
 				<nav class="col-lg-9 col-6">
-					<a class="cmn-toggle-switch cmn-toggle-switch__htx open_close" href="#0"><span>Menu mobile</span></a>
+					<a class="cmn-toggle-switch cmn-toggle-switch__htx open_close" href="#0"><span>Menu móvil</span></a>
 					<ul id="top_access">
 						<li><a href="login.html"><i class="pe-7s-user"></i></a></li>
 						<li><a href="register.html"><i class="pe-7s-add-user"></i></a></li>
@@ -79,22 +79,22 @@
 			<div class="container margin_120_95">			
 				<div class="row">
 					<div class="col-lg-6">
-						<h1>It's time to find you!</h1>
-						<p class="lead">Te pri adhuc simul. No eros errem mea. Diam mandamus has ad. Invenire senserit ad has, has ei quis iudico, ad mei nonumes periculis.</p>
+						<h1>Llegó la hora de encontrarte!</h1>
+						<p class="lead">Esta es la opción que necessitas tú, tus pacientes y tus futuros pacientes.En esta plataforma encontrarás las formas más fáciles y ágiles para agendar tus citas.</p>
 						<div class="box_feat_2">
 							<i class="pe-7s-map-2"></i>
-							<h3>Let patients to Find you!</h3>
-							<p>Ut nam graece accumsan cotidieque. Has voluptua vivendum accusamus cu. Ut per assueverit temporibus dissentiet.</p>
+							<h3>Deja que tus pacientes te encuentren!</h3>
+							<p>Proporcionaremos tu ubicación a fin de que los pacientes que quieran tu servicio te encuentren fácilmente.</p>
 						</div>
 						<div class="box_feat_2">
 							<i class="pe-7s-date"></i>
-							<h3>Easly manage Bookings</h3>
-							<p>Has voluptua vivendum accusamus cu. Ut per assueverit temporibus dissentiet. Eum no atqui putant democritum, velit nusquam sententiae vis no.</p>
+							<h3>Maneja fácilmente tus citas</h3>
+							<p>Nunca había sido tan fácil el manejo de todas las citas que tengas, queremos ayudarte y organizar todo sin que tú te des cuenta.</p>
 						</div>
 						<div class="box_feat_2">
 							<i class="pe-7s-phone"></i>
-							<h3>Instantly via Mobile</h3>
-							<p>Eos eu epicuri eleifend suavitate, te primis placerat suavitate his. Nam ut dico intellegat reprehendunt, everti audiam diceret in pri, id has clita consequat suscipiantur.</p>
+							<h3>Incluso desde tu celular</h3>
+							<p>Con nuestra aplicación móvil, podrás realizar todos los procesos que necesites sin necesidar de usar tu computadora, lo hacemos fácil, lo hacemos por tí.</p>
 						</div>
 					</div>
 					<!-- /col -->
@@ -104,12 +104,12 @@
 								<div class="row">
 									<div class="col-md-6 ">
 										<div class="form-group">
-											<input type="text" class="form-control" placeholder="Name">
+											<input type="text" class="form-control" placeholder="Nombre">
 										</div>
 									</div>
 									<div class="col-md-6">
 										<div class="form-group">
-											<input type="text" class="form-control" placeholder="Last Name">
+											<input type="text" class="form-control" placeholder="Apellido">
 										</div>
 									</div>
 								</div>
@@ -117,7 +117,7 @@
 								<div class="row">
 									<div class="col-lg-12">
 										<div class="form-group">
-											<input type="text" class="form-control" placeholder="Specialization">
+											<input type="text" class="form-control" placeholder="Especialización">
 										</div>
 									</div>
 								</div>
@@ -125,13 +125,13 @@
 								<div class="row">
 									<div class="col-md-6">
 										<div class="form-group">
-											<input type="text" class="form-control" placeholder="City">
+											<input type="text" class="form-control" placeholder="Ciudad">
 										</div>
 									</div>
 									<div class="col-md-6">
 										<div class="form-group">
 											<select class="form-control">
-												<option value="">Country</option>
+												<option value="">País</option>
 											</select>
 										</div>
 									</div>
@@ -140,12 +140,12 @@
 								<div class="row">
 									<div class="col-md-6">
 										<div class="form-group">
-											<input type="text" class="form-control" placeholder="Mobile Phone">
+											<input type="text" class="form-control" placeholder="Teléfono celular">
 										</div>
 									</div>
 									<div class="col-md-6">
 										<div class="form-group">
-											<input type="text" class="form-control" placeholder="Office Phone">
+											<input type="text" class="form-control" placeholder="Teléfono de oficina">
 										</div>
 									</div>
 								</div>
@@ -153,13 +153,13 @@
 								<div class="row">
 									<div class="col-lg-12">
 										<div class="form-group">
-											<input type="email" class="form-control" placeholder="Email Address">
+											<input type="email" class="form-control" placeholder="Correo Electrónico">
 										</div>
 									</div>
 								</div>
 								<!-- /row -->
-								<p class="text-center add_top_30"><input type="submit" class="btn_1" value="Submit"></p>
-								<div class="text-center"><small>Ut nam graece accumsan cotidieque. Has voluptua vivendum accusamus cu. Ut per assueverit temporibus dissentiet.</small></div>
+								<p class="text-center add_top_30"><input type="submit" class="btn_1" value="Enviar"></p>
+								<div class="text-center"><small>Al hacer click en enviar aceptarás los términos y nos permitirás contactarte con el fin de proporcionarte mayor información.</small></div>
 							</form>
 						</div>
 						<!-- /box_form -->
@@ -196,7 +196,7 @@
 				<div class="col-lg-4 col-md-4">
 					<h5>Contact with Us</h5>
 					<ul class="contacts">
-						<li><a href="tel://61280932400"><i class="icon_mobile"></i> + 61 23 8093 3400</a></li>
+						<li><a href="tel://61280932400"><i class="icon_mobile"></i> +593 985652891</a></li>
 						<li><a href="mailto:info@PSYCHOBOOKING.com"><i class="icon_mail_alt"></i> help@PSYCHOBOOKING.com</a></li>
 					</ul>
 					<div class="follow_us">
@@ -220,7 +220,7 @@
 					</ul>
 				</div>
 				<div class="col-md-4">
-					<div id="copy">© 2017 PSYCHOBOOKING</div>
+					<div id="copy">© 2020 PSYCHOBOOKING</div>
 				</div>
 			</div>
 		</div>
