--- a/html_menu_1/detail-about-1.html
+++ b/html_menu_1/detail-about-1.html
@@ -6,12 +6,12 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="Find easily a doctor and book online an appointment">
-	<meta name="author" content="Ansonika">
+	<meta name="author" content="David, Jhossias, Galo">
 	<title>FINDOCTOR - Find easily a doctor and book online an appointment</title><meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="Búsqueda fácil de un Psicólogo en linea y reservación de turno">
-	<meta name="author" content="Ansonika">
+	<meta name="author" content="David, Jhossias, Galo">
 	<title>PSYCHOBOOKING - Encuentre fácilmente un psicólogo y reserve una cita en línea</title>
 
 	<!-- Favicons-->
