Cambio boton pago

--- a/html_menu_1/booking-page.html
+++ b/html_menu_1/booking-page.html
@@ -342,7 +342,7 @@
                                 </li>
                             </ul>
                             <hr />
-                            <div class="btn_1 full-width">Confirmar y Pagar</div>
+                            <a href="confirm.html" class="btn_1 full-width">Confirmar y Pagar</a>
                         </form>
 
                     </div>
