--- a/html_menu_1/about.html
+++ b/html_menu_1/about.html
@@ -122,7 +122,7 @@
                     <a href="detail-about-1.html">
                         <div class="title">
                             <h4>David Mendoza<em>Desarrollador Amable</em></h4>
-                        </div><img src="http://via.placeholder.com/350x500.jpg" alt="">
+                        </div><img src="img/david.jpeg" alt="">
                     </a>
                 </div>
                 <div class="item">
