--- a/html_menu_1/about.html
+++ b/html_menu_1/about.html
@@ -136,7 +136,7 @@
                     <a href="detail-about-3.html">
                         <div class="title">
                             <h4>Galo Ortega<em>Desarrollador Servicial</em></h4>
-                        </div><img src="http://via.placeholder.com/350x500.jpg" alt="">
+                        </div><img src="img/galo.jpg" alt="">
                     </a>
                 </div>
                 <div class="item">
