--- a/html_menu_1/booking-page.html
+++ b/html_menu_1/booking-page.html
@@ -32,9 +32,9 @@
     <link href="css/custom.css" rel="stylesheet" />
 
     <!-- Bootstrap core CSS -->
-    <link href="../mdb/bootstrap.min.css" rel="stylesheet" />
+    <link href="mdb/bootstrap.min.css" rel="stylesheet" />
     <!-- Material Design Bootstrap -->
-    <link href="../mdb/mdb.min.css" rel="stylesheet" />
+    <link href="mdb/mdb.min.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -434,7 +434,7 @@
     <script src="js/jquery-2.2.4.min.js"></script>
     <script src="js/common_scripts.min.js"></script>
     <script src="js/functions.js"></script>
-    <script type="text/javascript" src="../mdb/mdb.min.js"></script>
+    <script type="text/javascript" src="mdb/mdb.min.js"></script>
     <script src="js/steeps.js"></script>
 </body>
 
