--- a/html_menu_1/about.html
+++ b/html_menu_1/about.html
@@ -95,7 +95,7 @@
                 <div class="row justify-content-between">
                     <div class="col-lg-6">
                         <figure class="add_bottom_30">
-                            <img src="http://via.placeholder.com/800x450.jpg" class="img-fluid" alt="">
+                            <img src="img/psicologos.jpg" class="img-fluid" alt="">
                         </figure>
                     </div>
                     <div class="col-lg-5">
@@ -122,7 +122,7 @@
                     <a href="detail-about-1.html">
                         <div class="title">
                             <h4>David Mendoza<em>Desarrollador Amable</em></h4>
-                        </div><img src="img/david.jpeg" alt="">
+                        </div><img src="img/david.jpg" alt="">
                     </a>
                 </div>
                 <div class="item">
@@ -137,13 +137,6 @@
                         <div class="title">
                             <h4>Galo Ortega<em>Desarrollador Servicial</em></h4>
                         </div><img src="img/galo.jpg" alt="">
-                    </a>
-                </div>
-                <div class="item">
-                    <a href="detail-about-4.html">
-                        <div class="title">
-                            <h4>Javier Vinueza<em>Desarrollador Junior "The Boss"</em></h4>
-                        </div><img src="http://via.placeholder.com/350x500.jpg" alt="">
                     </a>
                 </div>
 
