--- a/html_menu_1/index.html
+++ b/html_menu_1/index.html
@@ -77,7 +77,7 @@
 	<main>
 		<div class="hero_home version_1">
 			<div class="content">
-				<h3>Encuenctra un psicólogo!</h3>
+				<h3>Encuentra un psicólogo!</h3>
 				<p>
 					Juntos podemos superar cualquier obstáculo, no esperes más.
 				</p>
